--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "@nestjs/cli": "11.0.7",
     "@nestjs/schematics": "11.0.5",
     "@nestjs/testing": "11.1.3",
+    "@swc/core": "^1.12.7",
     "@types/express": "5.0.3",
     "@types/jest": "30.0.0",
     "@types/node": "24.0.4",
     "@types/supertest": "6.0.3",
     "@typescript-eslint/eslint-plugin": "8.35.0",
     "@typescript-eslint/parser": "8.35.0",
+    "@vitest/coverage-v8": "^3.2.4",
     "eslint": "9.29.0",
     "eslint-config-prettier": "10.1.5",
     "eslint-plugin-import": "2.32.0",
@@ -52,6 +54,7 @@
     "ts-node": "10.9.2",
     "tsconfig-paths": "4.2.0",
     "typescript": "4.3.5",
+    "unplugin-swc": "^1.5.5",
     "vitest": "^3.2.4"
   },
   "jest": {
